--- a/Info.plist
+++ b/Info.plist
@@ -21,7 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>Can we use your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Can we use your micraphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Can we save stuff</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
